--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1678,7 +1678,9 @@ font-size: 35px;
 	border: 1px solid #ddd;
 	border-radius: 5px;
 	font-size: 1rem;
+	background-color: #000;
 	transition: border 0.3s ease;
+	color: white;
   }
   
   .form-group input:focus,
@@ -1692,7 +1694,7 @@ font-size: 35px;
   }
   
   .gymp-button {
-	background-color: #ff4757;
+	background-color: orange;
 	color: white;
 	border: none;
 	padding: 15px 40px;
@@ -1707,7 +1709,7 @@ font-size: 35px;
   }
   
   .gymp-button:hover {
-	background-color: #ff6b81;
+	background-color: orangered;
 	transform: translateY(-3px);
 	box-shadow: 0 5px 15px rgba(255, 71, 87, 0.3);
   }
@@ -1715,14 +1717,14 @@ font-size: 35px;
   /* Map Section */
   .map-section {
 	padding: 60px 0;
-	background-color: #f8f9fa;
+	background-color: #000;
   }
   
   .map-section h2 {
 	text-align: center;
 	font-size: 2.5rem;
 	margin-bottom: 40px;
-	color: #333;
+	color: white;
   }
   
   .map-container {
