--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1780,7 +1780,7 @@ font-size: 35px;
 .login21-form-section {
   flex: 1;
   padding: 40px;
-  background: linear-gradient(to bottom right, #f8bbd0, #e1bee7);
+  background: linear-gradient(to bottom right, #dab00b, #e1bee7);
 }
 
 .login21-logo {
