--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1860,7 +1860,7 @@ font-size: 35px;
 
 .login-button:hover{
 	color: black;
-	background-color: lightgreen;
+	background: linear-gradient(90deg, #e6c10c, #e6e283);
 }
 
 .login21-register {
@@ -2043,7 +2043,7 @@ font-size: 35px;
 
  .login-container27 {
 	height: 100vh;
-	background: linear-gradient(135deg, #ff914d, #ff6b00, #ff914d);
+	/* background: linear-gradient(135deg, #ff914d, #ff6b00, #ff914d); */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -2053,9 +2053,91 @@ font-size: 35px;
 	  background: linear-gradient(135deg, #fff0e0, #ffd5b3);
 	  border-radius: 20px;
 	  padding: 40px 30px;
-	  width: 320px;
+	  width: 450px;
+	  height: 550px;
 	  box-shadow: 0 30x 20px rgba(0, 0, 0, 0.25);
 	  text-align: center;
 	  animation: fadeIn27 0.8s ease;
 
  }
+
+ .login-avatar27 img{
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	border: 3px solid #ff6b00;
+	background-color: #fff;
+	padding: 15px;
+
+
+ }
+
+ .login-title27{
+	
+	color: #ff6b00;
+	font-weight: bold;
+	font-size: 1.6em;
+	margin: 35px 0;
+
+
+ }
+ .login-input27 {
+	width: 100%;
+	padding: 12px 15px;
+	margin: 15px 0;
+	border-radius: 10px;
+	background: #ffaf5f;
+	outline: none;
+	font-size: 1em;
+	transition: border-color 0.3s;
+
+ }
+
+ .login-input27:focus {
+	border-color: #ff6b00;
+
+ }
+
+ .login-input27::placeholder {
+  color:white;
+  font-weight: bold;
+}
+
+/* Sign In Button */
+.login-button27 {
+  width: 100%;
+  padding: 12px;
+  margin-top: 15px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(90deg, #ff6b00, #ff914d);
+  color: #fff;
+  font-size: 1em;
+  cursor: pointer;
+  font-weight: bold;
+  
+}
+
+.login-button27:hover {
+  background: linear-gradient(90deg, #ff914d, #ff6b00);
+}
+
+/* Error message style */
+p {
+  margin: 8px 0 0;
+  
+  font-size: 0.9em;
+}
+
+/* Simple fade-in animation */
+@keyframes fadeIn27 {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
