--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2086,7 +2086,7 @@ body {
 
 /* Title */
 .login-title27 {
-  color: #ff6b00;
+  color: black;
   font-weight: bold;
   font-size: 1.6em;
   margin: 30px 0;
@@ -2134,11 +2134,7 @@ body {
 }
 
 /* Error message style */
-p {
-  margin: 8px 0 0;
-  font-size: 0.9em;
-  color: red;
-}
+ 
 
 /* Simple fade-in animation */
 @keyframes fadeIn27 {
